# scalene

./: .deepsource.toml  .gdbinit  .gitignore  CITATION.cff  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  GNUmakefile  MANIFEST.in  Makefile  Pipfile  README.md  Scalene-Agents.md  Scalene-Debugging.md  Scalene-GUI.md  demo_torch_jit.py  get_line_atomic.cpp  heaplayers-make.mk  index.rst  joseph.py  libcheaper.cpp  libscalene.cpp  merge_scalene_neuron_profiles.py  mmap_hl_spinlock.cpp  motivating_example.py  multiprocessing_exec.py  mypy.ini  profile.json  pyproject.toml  pyrightconfig.json  pytest.ini  refactoring_todo.md  requirements.txt  ruff.toml  scalene-demo.ipynb  scalene-usage.txt  scalene.py  serve_gui.sh  setup.py
.giithub/workflows/: lint_python.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  blacken.yml  build-and-upload.yml  codeql.yml  lint_python.yml  pypi.yml  python-app.yml  release-pypi-upload.yml  run-linters.yml  smoketest-homebrew.yml  smoketest-x86.yml  test-homebrew-install.yml  test-smoketests.yml  tests.yml
Formula/: libscalene.rb
agents/: CLAUDE.md  windows-memory-profiling-port.md
benchmarks/: bench_torch_memory.py  benchmark.py  julia1_nopil.py  measure_profiler_memory.py  new_benchmark.py  pystone.py
docs/: README_CN.md
include/: buffer.hpp  bufferbump.hpp  cheapheap.hpp  classwarfare.hpp  common.hpp  dynarray.hpp  fastmemcpy.hpp  heapredirect.hpp  libdivide.h  lowdiscrepancy.hpp  memcpysampler.hpp  mmaparray.hpp  mwc.h  nextheap.hpp  open_addr_hashtable.hpp  repo.hpp  repoman.hpp  reposource.hpp  rtememcpy.h  samplefile.hpp  sampleheap.hpp  sampler.hpp  stack.hpp  staticbufferheap.hpp  staticmutex.hpp  stprintf-test.cpp  stprintf.h  sysmallocheap.hpp  tprintf-test.cpp
scalene/: README.md  __init__.py  __main__.py  adaptive.py  entrypoint.py  find_browser.py  get_module_details.py  hashablelist.py  hyperloglog.py  launchbrowser.py  leak_analysis.py  libscalene.dylib  merge_scalene_neuron_profiles.py  profile.py  redirect_python.py  replacement_asyncio.py  replacement_exec.py  replacement_exit.py  replacement_fork.py  replacement_get_context.py  replacement_lock.py  replacement_mp_lock.py  replacement_pjoin.py  replacement_poll_selector.py  replacement_sem_lock.py  replacement_signal_fns.py  replacement_thread_join.py  replacement_thread_start.py  reservoir.py  runningstats.py  scalene-usage.txt  scalene.py  scalene_accelerator.py  scalene_ai_config.py  scalene_analysis.py  scalene_apple_gpu.py  scalene_arguments.py  scalene_async.py  scalene_asyncio.py  scalene_client_timer.py  (+45 more)
scalene/old/: reservoir.py
scalene/scalene-gui/: README.md  TODO-TypeScript.md  amazon.js  amazon.ts  anthropic.ts  azure.js  azure.ts  example-profile.js  gemini.ts  gui-elements.js  gui-elements.ts  index.html  index.html.template  list-amazon-models.py  ollama.js  ollama.ts  openai.js  openai.ts  optimizations.js  optimizations.ts  package-lock.json  package.json  persistence.js  persistence.ts  prism.css  prism.d.ts  prism.js  profile.json  profiler.html  scalene-demo.js  scalene-demo.ts  scalene-fetch.js  scalene-fetch.ts  scalene-gui-bundle.js  scalene-gui.js  scalene-gui.ts  tablesort.d.ts  tablesort.js  tablesort.number.js  tsconfig.json  (+3 more)
src/include/: common.hpp  common_win.hpp  heapredirect.h  lowdiscrepancy.hpp  mallocrecursionguard.hpp  mallocrecursionguard_win.hpp  memcpysampler.hpp  mmapallocator.hpp  mwc.h  open_addr_hashtable-test.cpp  poissonsampleinterval.hpp  poissonsampler.hpp  py_env.hpp  pyptr.h  pyrecursionguard.hpp  pywhere.hpp  repo.hpp  repoman.hpp  rtememcpy.h  samplefile.hpp  samplefile_win.hpp  sampleheap.hpp  sampleheap_win.hpp  sampleinterval.hpp  sampler.hpp  scaleneheader.hpp  sharded_size_map.hpp  sizemanager.hpp  stprintf.h  thresholdsampler.hpp  traceconfig.hpp
src/source/: get_line_atomic.cpp  libpyenv.cpp  libscalene.cpp  libscalene_windows.cpp  native_unwind.cpp  pywhere.cpp  register_files_to_profile.cpp  traceconfig.cpp
test/: issue_659_workload.py  multiprocessing_test.py  native_thread_alloc.c  new_mp_test.py  pool-test.py  pool_spawn_test.py  profile_annotation_test.py  signal_test.py  small_mp_test.py  smoketest.py  smoketest_issue_1022.py  smoketest_issue_659.py  smoketest_line_invalidation.py  smoketest_pool_spawn.py  smoketest_profile_decorator.py  test-martinheinz.py  test-memory.py  test-native-thread-alloc-ctypes.py  test-native-thread-alloc.py  test-pprofile.py  test-size.py  test-torch-thread-alloc.py  test_async_demo.py  test_freethreaded_parity.py  test_sparkline.py  test_timers.py  test_tracer.py  testflask-driver.py  testflask.py  testme.py  testpyt.py  testtf.py  threads-test.py  timeline_view_demo.py  torchtest.py
test/automatic/: README.md
test/expensive_benchmarks/: README.md  bm_async_tree_io.py  bm_docutils.py  bm_fannukh.py  bm_mdp.py  bm_pprint.py  bm_raytrace.py  bm_sympy.py
test/issues/: issue270.py  test-issue124.py  test-issue126.py  test-issue130.py  test-issue156.py  test-issue167.py  test-issue193.py  test-issue244.py  test-issue256.py  test-issue266.py  test-issue31.py  test-issue379.py  test-issue691.py  test-issue74.py  test-issue914.py
test/line_attribution_tests/: bigmem_driver.py  (+11 more)
tests/: _scalene_subprocess.py  test_async_profiling.py  test_child_cmdline.py  test_combined_stacks_gui.py  test_coverup_1.py  test_coverup_10.py  test_coverup_100.py  test_coverup_101.py  test_coverup_103.py  test_coverup_105.py  test_coverup_106.py  test_coverup_107.py  test_coverup_109.py  test_coverup_11.py  test_coverup_110.py  test_coverup_111.py  test_coverup_112.py  test_coverup_113.py  test_coverup_114.py  test_coverup_115.py  test_coverup_116.py  test_coverup_117.py  test_coverup_118.py  test_coverup_119.py  test_coverup_12.py  test_coverup_120.py  test_coverup_121.py  test_coverup_122.py  test_coverup_123.py  test_coverup_124.py  test_coverup_125.py  test_coverup_126.py  test_coverup_128.py  test_coverup_129.py  test_coverup_13.py  test_coverup_131.py  test_coverup_132.py  test_coverup_133.py  test_coverup_136.py  test_coverup_137.py  (+122 more)
(+55 files in other folders)
