[build-system]
requires = ["setuptools>=65.5.1", "wheel~=0.38.1", "cython>=0.29.28"]
build-backend = "setuptools.build_meta"

[project]
name = "scalene"
description = "Scalene: A high-resolution, low-overhead CPU, GPU, and memory profiler for Python"
license = {text = "Apache License 2.0"}
keywords = ["performance memory profiler"]
# version is computed by setup.py
dynamic = ["version"]
requires-python = ">=3.8, !=3.11.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
readme = "README.md"
authors = [
    {name = "Emery Berger", email = "emery@cs.umass.edu"},
    {name = "Sam Stern"},
    {name = "Juan Altmayer Pizzorno"},
]
dependencies = [
    "astunparse>=1.6.3",
    "cloudpickle==1.6.0",
    "ipython>=8.10",
    "Jinja2>=3.0.3",
    "lxml==4.9.1",
    "packaging==20.9",
    "rich>=10.7.0",
    "pip~=21.1.2",
    "pynvml~=11.0.0",
    "pyperf==2.0.0",
]

[project.urls]
"Source code" = "https://github.com/plasma-umass/scalene"

[project.scripts]
scalene = "scalene.__main__:main"

[tool.setuptools]
packages = ["scalene"]
