[project]
name = "scalene"
description = "Scalene: A high-resolution, low-overhead CPU, GPU, and memory profiler for Python with AI-powered optimization suggestions"
readme = "README.md"
keywords = ["performance", "profiler", "optimization", "CPU", "GPU", "memory", "LLM"]
authors = [
    {name = "Emery Berger", email = "emery@cs.umass.edu"},
    {name = "Sam Stern", email = "jstern@umass.edu"},
    {name = "Juan Altmayer Pizzorno", email = "juan@altmayer.com"},
]
requires-python = ">=3.8,!=3.11.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows"
]
# see https://peps.python.org/pep-0508/#environment-markers for conditional syntax
dependencies = [
    "rich>=10.7.0",
    "cloudpickle>=2.2.1",
    # "pynvml>=11.0.0,<=11.5",
    "nvidia-ml-py>=12.555.43; platform_system !='Darwin'",
    "Jinja2>=3.0.3",
    "psutil>=5.9.2",
    "numpy>=1.24.0,!=1.27; python_version < '3.14'",
    "numpy>=2.3.4; python_version >= '3.14'",
    "astunparse>=1.6.3; python_version < '3.9'",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

dynamic = ["version"]   # computed by setup.py

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.0",
    # TensorFlow for testing library profiler integration
    # TensorFlow doesn't support Python 3.14+ yet
    "tensorflow>=2.15; python_version < '3.14' and platform_system != 'Windows'",
    # JAX for testing library profiler integration
    # JAX doesn't support Windows
    "jax>=0.4.20; python_version < '3.14' and platform_system != 'Windows'",
    "jaxlib>=0.4.20; python_version < '3.14' and platform_system != 'Windows'",
]

[project.urls]
"Homepage" = "https://github.com/plasma-umass/scalene"
"Repository" = "https://github.com/plasma-umass/scalene"

[project.scripts]
scalene = "scalene.__main__:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=70.1",
    "setuptools_scm>=8",
    "cython",
]
